endpoints for sensors and event
